compiler/tests/compile-fail/misc-body-errors.rsp
(import [risp base])

(defn too-many-quote-args ()
  (quote 1 2 3))
 ;^^^^^^^^^^^^^ ERROR wrong arg count; expected 1

(defn def-in-body-context ()
  (def foo 1))
 ;^^^^^^^^^^^ ERROR (def) outside module body

(defn let-without-binding-vector ()
  (let x 1))
      ;^ ERROR illegal argument: binding vector expected

(def missing-param-list
  (fn))
 ;^^^^ ERROR illegal argument: parameter declaration missing

(def bad-param-destruc
  (fn (1)))
      ;^ ERROR illegal argument: values can only be bound to variables or destructured into lists

(def user-compile-error
  (compile-error "Some message")) ;~ ERROR Some message